<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/editor_new"
        android:icon="@drawable/plus"
        android:showAsAction="ifRoom"
        android:title="@string/editor_menu_new"/>
    <item
        android:id="@+id/editor_open"
        android:icon="@drawable/open"
        android:showAsAction="ifRoom"
        android:title="@string/editor_menu_edit"/>
    <item
        android:id="@+id/editor_save"
        android:icon="@drawable/save"
        android:showAsAction="ifRoom"
        android:title="@string/editor_menu_save"
        android:visible="false"/>
    <item
        android:id="@+id/editor_help"
        android:icon="@drawable/help"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/editor_menu_help"/>

</menu>